--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
-title: "Will Russell"
-email: fellowship@mlh.io
+title: "Ingrid Arreola"
+email: inarreol@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  66 Days Of Data -- updated daily for the challenge!
 baseurl: "/" 
-url: "/portfolio-template" 
-twitter_username: mlhacks
-github_username:  mlh-fellowship
+url: "https://ingridarreola.github.io/" 
+twitter_username: ingrid_arreola
+github_username:  ingridarreola
 
 sass:
   sass_dir: _sass
