--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,10 +1,10 @@
-- course: BSc Computer Science
-  institute: University of Birmingham
-  dates: 2018 - 2021
+- course: BS Human Biology
+  institute: Indiana University
+  dates: 2010 - 2014
   logo: uob.png
   
-- course: Explorer Fellow
-  institute: MLH Fellowship
-  dates: Fall 2020
+- course: Masters Data Science
+  institute: Indiana University
+  dates: Fall 2021
   logo: fellowship.svg
   
